--- a/teseo/particles.ipynb
+++ b/teseo/particles.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "dx_slider = widgets.FloatSlider(\n",
     "    value=1.000,\n",
     "    min=0.000,\n",
-    "    max=2.000,\n",
+    "    max=10.000,\n",
     "    step=0.02,\n",
     "    description='Zoom out:',\n",
     "    readout_format='.3f',\n",
@@ -64,6 +64,13 @@
     "grid_checkbox = widgets.Checkbox(\n",
     "    value=True,\n",
     "    description='Gridlines',\n",
+    "    disabled=False,\n",
+    "    indent=False\n",
+    ")\n",
+    "\n",
+    "gshhs_checkbox = widgets.Checkbox(\n",
+    "    value=True,\n",
+    "    description='GSHHS',\n",
     "    disabled=False,\n",
     "    indent=False\n",
     ")\n",
@@ -96,13 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9004fa0681a41c4817ac939dede06b1",
+       "model_id": "7d2a8dc1b74942a890f3c6d0fb634244",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,12 +200,10 @@
     "    if dx is not None:\n",
     "        extent = [df_tmp.lon.min()-dx, df_tmp.lon.max()+dx, df_tmp.lat.min()-dx, df_tmp.lat.max()+dx]\n",
     "\n",
-    "\n",
-    "\n",
     "    if extent is not None:\n",
     "        ax.set_extent(extent, crs=crs.PlateCarree())\n",
-    "    if gshhs:\n",
-    "        ax.add_feature(feature.GSHHSFeature(scale=\"full\")) \n",
+    "    \n",
+    "\n",
     "    \n",
     "    gl = ax.gridlines(crs=crs.PlateCarree(), draw_labels=True,\n",
     "                  linewidth=0.5, color='black', alpha=0.8, linestyle='--')\n",
@@ -209,10 +214,12 @@
     "    if grid is False:\n",
     "        gl.xlines = False\n",
     "        gl.ylines = False\n",
-    "\n",
-    "    ax.add_feature(feature.LAND)\n",
+    "    if gshhs:\n",
+    "        ax.add_feature(feature.GSHHSFeature(scale=\"full\", facecolor=\"grey\"))\n",
+    "    else:\n",
+    "        ax.add_feature(feature.LAND)\n",
+    "        ax.add_feature(feature.COASTLINE)\n",
     "    ax.add_feature(feature.OCEAN)\n",
-    "    ax.add_feature(feature.COASTLINE)\n",
     "    ax.add_feature(feature.BORDERS, linestyle=\":\")\n",
     "    ax.add_feature(feature.LAKES, alpha=0.5)\n",
     "    ax.add_feature(feature.RIVERS)\n",
@@ -231,18 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2be171b05ab5420e83e081f8f8097806",
+       "model_id": "f94756e1f049422f9b7153c5badb0fd5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(VBox(children=(Checkbox(value=True, description='Gridlines', indent=False), FloatSlider(value=0.…"
+       "Tab(children=(VBox(children=(HBox(children=(Checkbox(value=True, description='GSHHS', indent=False), Checkbox(…"
       ]
      },
      "metadata": {},
@@ -251,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3434e608b498494a9f5b411bd976fb48",
+       "model_id": "bdbb5941f2464da6a081518c12b41ea0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7af39387ee3d4809820f8a3563e26b99",
+       "model_id": "3346a42330aa43d3900fdd6757e1bafd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,10 +288,10 @@
     "time_panel = widgets.HBox([play, time_slider])\n",
     "# control_panel = widgets.HBox([widgets.VBox([grid_checkbox, dx_slider, psize_slider]), widgets.VBox([pmarker_box, pcolor_box])])\n",
     "tab = widgets.Tab()\n",
-    "tab.children = [widgets.VBox([grid_checkbox, dx_slider]), widgets.VBox([psize_slider, pmarker_box, pcolor_box])]\n",
+    "tab.children = [widgets.VBox([widgets.HBox([gshhs_checkbox, grid_checkbox]), dx_slider]), widgets.VBox([psize_slider, pmarker_box, pcolor_box])]\n",
     "tab._titles = {0:\"map properties\", 1:\"particle properties\"}\n",
     "\n",
-    "out = interactive_output(plot_teseo_particles, {\"t\":time_slider, \"dx\":dx_slider, \"pmarker\":pmarker_box, \"pcolor\": pcolor_box, \"psize\": psize_slider, \"grid\":grid_checkbox})\n",
+    "out = interactive_output(plot_teseo_particles, {\"t\":time_slider, \"dx\":dx_slider, \"pmarker\":pmarker_box, \"pcolor\": pcolor_box, \"psize\": psize_slider, \"grid\":grid_checkbox, \"gshhs\": gshhs_checkbox})\n",
     "display(tab, out, time_panel)"
    ]
   }
